adding text description for scroll

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Playfair+Display&display=swap" rel="stylesheet">
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">    <meta charset="utf-8">
     <title>Final Project</title>
   </head>
   <body>
@@ -31,6 +31,8 @@
     </div>
 
     <h1 id="title2">Comparing Gender Wage Gap Problem in STEM & STEM-related Jobs</h1>
+    <h2 id='scroll'> Scroll down to explore gender wage problems across different industries!</h2>
+    <h2 id="scroll"><i class="fas fa-angle-down"></i></h2>
 
     <section id="scrolly">
       <article>
@@ -49,15 +51,31 @@
         </div>
         <div class="step" data-step="2">
           <h2>Comparing Gender Wage Gap in the Top 20 STEM Jobs that Employ the Most Women</h2>
-          <p>The gender wage gap in STEM jobs </p>
+          <p>The gender wage gap in STEM jobs as seen in the distance between the scatter plots and the equal pay
+            line is not particularly large. Though it's notable that only 1 job, 'Biological Scientists', where the
+            median female earnings are equal to or larger than that of men's. 
+          </p>
+          <p>
+            What is notable however, is the lack of any large circles representing a larger number of 
+            women employed at the job. The main problem is the lack of women hired at many of these high 
+            paying jobs. For example, the two highest paying jobs, 'Software Developers' and 'Computer Systems Manager',
+            women make up 18.8% and  29.7% of the total employed respectively. Worringly, these are the top 20 jobs
+            that hire the most women.
+          </p>
         </div>
         <div class="step" data-step="3">
           <h2>Comparing Gender Wage Gap in the Top 20 STEM-Related Jobs that Employ the Most Women</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            STEM related jobs hire many more women then pure STEM jobs because it includes jobs such as vocational nurses
+            and registered nurses where women make up close to 90% of total employed. However, despite making up
+            majority of the numbers, women's median wages in these jobs are still below that of men's. Despite this, 
+            the progress made in STEM related jobs can be said to be better with many of the jobs edging closer to equal
+            median pay than in the other industries.
+          </p>
+          <p> An outlier is 'other physicians' which is one of the highest paying jobs in the country. As 
+            is the case for the higher paying jobs in STEM, women are under-represented at 39% of total employed
+            and not paid as well as their male counterparts with women's median wage coming in at 74% of men's.
+          </p>
         </div>
 
       </article>
