adding intro text, source and other minor style points

--- a/index.html
+++ b/index.html
@@ -9,11 +9,26 @@
     <title>Final Project</title>
   </head>
   <body>
-    
+    <h1 id ='title'>Understanding Gender Inequality through the Gender Wage Gap Problem</h1>
+    <h2 id ='subtitle'>A Data Story by Dominic Teo <a href='https://github.com/domteo95/dynamic-data-viz'> <i style="color: #182A34;" class="fab fa-github"></i></a></h2>
+    <p id='introduction'>It is common practice to view gender inequality as a single problem rather than a large problem consisting of many smaller
+      components. I believe that gender inequality can be largely divided into the political realm (getting equal female political representation at 
+      the many different political bodies) as well as the economic realm which can be divided into (equal opportunity/representation in different industries
+      and at different levels of seniority as well as the gender pay gap). This data story will be largely focused on the gender wage gap an area that America
+      does quite poorly (as we'll see), despite their above average performance in other indicators for gender equality in the economic realm. I've also chosen to 
+    focus on the economic realm because I believe that in the short term more can be done to achieve economic gender equality.</p>
+    <p id='introduction'>This data story will be divided into 2 interactive visualization sections. The first section will focus on comparing the US's performance
+      in achieving gender wage gaps with several other high income OECD countries. Readers are able to choose any yearly range from 2002 to 2017 as well as select 
+      any of the countries that they want to explicitly make comparisons with the US. Users are then able to hover around the points for selected countries to get 
+      more details. Selected countries will also be color-coded differently for easy differentiation. While the ranks may not change too greatly across the years,
+      users can hover around the points to find the percentage difference in wages. The second section explores how the gender wage gap in the US differs across 
+      industries and within the STEM and STEM related industries. These are important industries to focus on since they're among the highest paying jobs in the US 
+      and suffer from 2 problems - unequal female representation in these high paying jobs and a gender wage gap that persists even among the women employed. 
+    </p>
+    <h2 id ='title1'></h2>
+    <h3 id='subtitle1'></h3>
     <div id ='visual1-container'>
-      <h1 id ='title1'></h1>
       <div id='grid-container'>
-        <h3 id='subtitle1'></h3>
         <div class="col-sm-2">
           <p id="value-range">Selected Years: 2002 - 2017</p>
         </div>
@@ -30,8 +45,8 @@
       </div>
     </div>
 
-    <h1 id="title2">Comparing Gender Wage Gap Problem in STEM & STEM-related Jobs</h1>
-    <h2 id='scroll'> Scroll down to explore gender wage problems across different industries!</h2>
+    <h2 id="title2">Comparing Gender Wage Gap Problem in STEM & STEM-related Jobs</h2>
+    <h3 id='scroll'> Scroll down to explore gender wage problems across different industries!</h3>
     <h2 id="scroll"><i class="fas fa-angle-down"></i></h2>
 
     <section id="scrolly">
@@ -50,7 +65,7 @@
           the under-representation of women mean they're not able to enjoy the higher wages as much as men. </p>
         </div>
         <div class="step" data-step="2">
-          <h2>Comparing Gender Wage Gap in the Top 20 STEM Jobs that Employ the Most Women</h2>
+          <h2>Comparing Gender Wage Gap in the Top 20 STEM Jobs that Employ the Most Women <br> (Hover Over Points)</h2>
           <p>The gender wage gap in STEM jobs as seen in the distance between the scatter plots and the equal pay
             line is not particularly large. Though it's notable that only 1 job, 'Biological Scientists', where the
             median female earnings are equal to or larger than that of men's. 
@@ -64,7 +79,8 @@
           </p>
         </div>
         <div class="step" data-step="3">
-          <h2>Comparing Gender Wage Gap in the Top 20 STEM-Related Jobs that Employ the Most Women</h2>
+          <h2>Comparing Gender Wage Gap in the Top 20 STEM-Related Jobs that Employ the Most Women <br> (Hover Over Points)</h2>
+          
           <p>
             STEM related jobs hire many more women then pure STEM jobs because it includes jobs such as vocational nurses
             and registered nurses where women make up close to 90% of total employed. However, despite making up
