--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <body>
     <h1 id ='title'>Understanding Gender Inequality through the Gender Wage Gap Problem</h1>
     <h2 id ='subtitle'>A Data Story by Dominic Teo <a href='https://github.com/domteo95/dynamic-data-viz'> <i style="color: #182A34;" class="fab fa-github"></i></a></h2>
+    <h4 id ='subtitle'>*Best Viewed on a Laptop Screen</h4>
     <p id='introduction'>It is common practice to view gender inequality as a single problem rather than a large problem consisting of many smaller
-      components. I believe that gender inequality can be largely divided into the political realm (getting equal female political representation at 
-      the many different political bodies) as well as the economic realm which can be divided into (equal opportunity/representation in different industries
-      and at different levels of seniority as well as the gender pay gap). This data story will be largely focused on the gender wage gap an area that America
-      does quite poorly (as we'll see), despite their above average performance in other indicators for gender equality in the economic realm. I've also chosen to 
+      components. Gender inequality can be largely divided into the political realm (equal female political representation at 
+      the different political bodies) & the economic realm which can be divided into (representation in different industries
+      and at different levels of seniority & the gender pay gap). This data story will be largely focused on the gender wage gap, an area that America
+      does quite poorly (as we'll see), despite their above average performance in other indicators. I've also chosen to 
     focus on the economic realm because I believe that in the short term more can be done to achieve economic gender equality.</p>
     <p id='introduction'>This data story will be divided into 2 interactive visualization sections. The first section will focus on comparing the US's performance
       in achieving gender wage gaps with several other high income OECD countries. Readers are able to choose any yearly range from 2002 to 2017 as well as select 
@@ -30,7 +31,7 @@
     <div id ='visual1-container'>
       <div id='grid-container'>
         <div class="col-sm-2">
-          <p id="value-range">Selected Years: 2002 - 2017</p>
+          <h2 id="value-range">Selected Years: 2002 - 2017</h2>
         </div>
         <div class="col-sm">
           <div id="slider-range"></div>
@@ -52,10 +53,10 @@
     <section id="scrolly">
       <article>
         <div class="step" data-step="1">
-          <h2>Comparing Gender Wage Gap Across Different Industries</h2>
+          <h2>Gender Wage Gap Across Industries</h2>
           <p>Men's wages are generally higher than that of women across the 3 broad industries of 
             'STEM occupations', 'STEM related occupations' and 'Non STEM Occupations'. The difference between
-          the median wages for men and women are particularly pronounced for the STEM-related jobs. The wage 
+          the median wages are particularly pronounced for STEM-related jobs. The wage 
         gap is so large despite the fact that women hold more of these jobs which suggest that they hold the 
       lower paying jobs in this field.</p>
 
@@ -100,6 +101,18 @@
         <div class="chart" id="chart"></div>
       </figure>
     </section>
+    <br><br><br><br><br>
+    <div id='sources'>
+      <h2>Notes:</h2>
+      <ul>
+        <li id='sources-list'>Ranking Countries Visualization: Data from OECD Stats which can be found <a href="https://stats.oecd.org/index.aspx?queryid=54751">here</a> </li>
+        <br>
+        <li id='sources-list'>Comparing Gender Wage Across Different Industries: Data from US Census Bureau which can be found <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/stem-occ-sex-med-earnings.html">here</a>  </li>
+        <br><br>
+        <li id='sources-list'>Special Thanks to Oscar Noriega, Roberto Barroso Luque, Rob Mitchell and Angelo Cozzubo for their invaluable feedback!</li>
+      </ul>
+    </div>
+    <br>
     
     <script src="bundle.js"></script>
   </body>
